@@ -1,5 +1,7 @@
 2016-05-01  Charlie Zender  <zender@uci.edu>
 
+	* Expand hdf_upk logic to nco_upk_HDF_MOD10, nco_upk_HDF_MOD13 for MODIS MOD10CM and MOD13C2 datasets
+
 	* Correct order of shuffle,deflate in nco_var_def_deflate()
 
 	* Respect fl_fm_out and dfl_lvl in nco_grd_mk(), nco_grd_nfr(), nco_rgr_map()
